--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="left-panel">
-            <div class="logo">Codificador e Decodificador AReis</div>
+            <div class="logo">Codificador e Decodificador Anderson Reis</div>
             <h2>Digite seu texto</h2>
             <textarea id="inputText" placeholder="Digite o texto aqui..."></textarea>
             <div class="buttons">
